--- a/src/main/webapp/styles.css
+++ b/src/main/webapp/styles.css
@@ -1,3 +1,4 @@
+/*
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;500&display=swap');
 
 .flex-center {
@@ -20,4 +21,4 @@ body {
     font-family: "Rajdhani", sans-serif;
     font-weight: 500;
     font-style: normal;
-}
+}*/
